--- a/composer.json
+++ b/composer.json
@@ -16,24 +16,23 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Rushikesh Soni",
-      "email": "rushikesh.soni@viitor.cloud",
+      "name": "Vcian - Viitorcloud",
+      "email": "administrator@viitorcloud.com",
       "role": "Creator"
     }
   ],
   "require": {
-    "laravel/framework": ">5.4",
-    "php": ">=5.4.0"
+    "php": "^8.0"
   },
   "autoload": {
     "psr-4": {
-      "LaravelIpGateway\\": "src/"
+      "Vcian\\LaravelIpGateway\\": "src/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "LaravelIpGateway\\IpGatewayProvider"
+        "Vcian\\LaravelIpGateway\\IpGatewayProvider"
       ]
     }
   },
